<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.it.wlugblog.PostActivity">


    <ImageButton
        android:id="@+id/ImageSelect"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:background="@mipmap/add_btn"
        android:contentDescription="@string/this_is_the_image_button"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/TitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/post_title"
            android:inputType="textPersonName"
            android:padding="10dp" />


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="8dp">

    <EditText
        android:id="@+id/DescField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/post_description"
        android:inputType="textMultiLine"
        android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/SubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit_post"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
